--- a/about.html
+++ b/about.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>¿Quien es Vilma?</title>
+    <style>
+        @import url("./css/base.css");
+        @import url("./css/basic-grid.css");
+      </style>
 </head>
 <body>
+    <header>
+        <h1>Hola! Soy Vilma!</h1>
+    </header>
     
 </body>
 </html>
