aplicados los estilos y el boilerplate de cada pagina

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galeria de Suculentas</title>
-    <link rel="ico" />
+    <link rel="ico"/>
     <!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
     <style>
-      @import url("./css/base.css");
+      @import url("./css/base.css");  
       @import url("./css/basic-grid.css");
     </style>
   </head>
@@ -47,15 +47,25 @@
           Echeveria Perle Von Nurnberg
         </div>
       </a>
-      <div class="card" id="echinocereus_pentalophus">
-        Echinocereus Pentalophus
-      </div>
-      <div class="card" id="graptopetalum_pentandrum">
-        Graptopetalum Pentandrum
-      </div>
-      <div class="card" id="haworthia_truncata">Haworthia Truncata</div>
-      <div class="card" id="kalanchoe_tyrsiflora">Kalanchoe Tyrsiflora</div>
-      <div class="card" id="stapelia">Stapelia</div>
+      <a href="echinocereus_pentalophus.html"
+        ><div class="card" id="echinocereus_pentalophus">
+          Echinocereus Pentalophus
+        </div>
+      </a>
+      <a href="graptopetalum_pentandrum.html">
+        <div class="card" id="graptopetalum_pentandrum">
+          Graptopetalum Pentandrum
+        </div>
+      </a>
+      <a href="haworthia_truncata.html">
+        <div class="card" id="haworthia_truncata">Haworthia Truncata</div>
+      </a>
+      <a href="kalanchoe_tyrsiflora.html">
+        <div class="card" id="kalanchoe_tyrsiflora">Kalanchoe Tyrsiflora</div>
+      </a>
+      <a href="stapelia.html">
+        <div class="card" id="stapelia">Stapelia</div>
+      </a>
     </section>
 
     <footer>
