formulario sin validacion

--- a/stapelia.html
+++ b/stapelia.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stapelia</title>
     <style>
-        @import url("./css/base.css");  
-        @import url("./css/basic-grid.css");
+        @import url("./css/paginas.css");
       </style>
 </head>
 <body>
