--- a/agave_victoria_reginae.html
+++ b/agave_victoria_reginae.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>agave victoria reginae</title>
+    <style>
+       @import url("./css/paginas.css");
+      </style>
 </head>
 <body>
     <h1>Agave Victoria Reginae</h1>
