creadas todas las paginas con sus respectivos elementos

--- a/graptopetalum_pentandrum.html
+++ b/graptopetalum_pentandrum.html
@@ -1,15 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>graptopetalum pentandrum</title>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Galeria de Suculentas</title>
+    <link rel="shortcut icon" type="image/jpg" href="/images/cactus_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/e3bad17181.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
-        @import url("./css/paginas.css");
-      </style>
-</head>
-<body>
-    <h1>Graptopetalum Pentandrum</h1>
-</body>
+      @import url("./css/base.css");
+      @import url("./css/basic-grid.css");
+    </style>
+  </head>
+
+  <body>
+    <header id="header">
+      <h1 id="h1">Graptopetalum Pentandrum</h1>
+      <a href="index.html">
+        <p><i class="fas fa-home"></i> Ir al inicio</p>
+      </a>
+      <nav id="nav-bar">
+        <a class="nav-link" href="about.html">Info</a>
+        <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
+        <a class="nav-link" href="aeonium.html">Aeonium</a>
+        <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
+        <a class="nav-link" href="agave_victoria_reginae.html"
+          >Agave Victoria Reginae</a
+        >
+        <a class="nav-link" href="crassula_alba.html">Crassula Alba</a>
+        <a class="nav-link" href="echeveria_perle_von_nurnberg.html"
+          >Echeveria Perle Von Nurnberg</a
+        >
+        <a class="nav-link" href="echinocereus_pentalophus.html"
+          >Echinocereus Pentalophus</a
+        >
+        <a class="nav-link" href="graptopetalum_pentandrum.html"
+          >Graptopetalum Pentandrum</a
+        >
+        <a class="nav-link" href="haworthia_truncata.html"
+          >Haworthia Truncata</a
+        >
+        <a class="nav-link" href="kalanchoe_tyrsiflora.html"
+          >Kalanchoe Tyrsiflora</a
+        >
+        <a class="nav-link" href="stapelia.html">Stapelia</a>
+      </nav>
+    </header>
+    <div class="flip-card-container">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front"></div>
+          <div class="flip-card-back">
+            <table>
+              <tr>
+                <td>sol</td>
+                <td>Sol directo en invierno, media sombra en verano</td>
+              </tr>
+              <tr>
+                <td>agua</td>
+                <td>Riego cada vez que el sustrato este seco</td>
+              </tr>
+              <tr>
+                <td>suelo</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>cuidados</td>
+                <td>Especie rústica. Proteger de heladas intensas</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p>Contacto</p>
+      <p><i class="fas fa-envelope"></i> Correo electronico:</p>
+      <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
+      <p><i class="fab fa-telegram-plane"></i> Telegram</p>
+    </footer>
+  </body>
 </html>
