--- a/about.html
+++ b/about.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quien es Vilma?</title>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Galeria de Suculentas</title>
+    <link rel="shortcut icon" type="image/jpg" href="/images/cactus_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/e3bad17181.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
-        @import url("./css/paginas.css");
-        
-      </style>
-</head>
-<body>
-    <header>
-        <h1>Hola! Soy Vilma!</h1>
+      @import url("./css/base.css");
+      @import url("./css/basic-grid.css");
+    </style>
+  </head>
+  <body>
+    <header id="header">
+      <h1>Hola! Soy Vilma!</h1>
+      <a href="index.html">
+        <p><i class="fas fa-home"></i> Ir al inicio</p>
+      </a>
+
+      <nav id="nav-bar">
+        <a class="nav-link" href="about.html">Info</a>
+        <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
+        <a class="nav-link" href="aeonium.html">Aeonium</a>
+        <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
+        <a class="nav-link" href="agave_victoria_reginae.html"
+          >Agave Victoria Reginae</a
+        >
+        <a class="nav-link" href="crassula_alba.html">Crassula Alba</a>
+        <a class="nav-link" href="echeveria_perle_von_nurnberg.html"
+          >Echeveria Perle Von Nurnberg</a
+        >
+        <a class="nav-link" href="echinocereus_pentalophus.html"
+          >Echinocereus Pentalophus</a
+        >
+        <a class="nav-link" href="graptopetalum_pentandrum.html"
+          >Graptopetalum Pentandrum</a
+        >
+        <a class="nav-link" href="haworthia_truncata.html"
+          >Haworthia Truncata</a
+        >
+        <a class="nav-link" href="kalanchoe_tyrsiflora.html"
+          >Kalanchoe Tyrsiflora</a
+        >
+        <a class="nav-link" href="stapelia.html">Stapelia</a>
+      </nav>
     </header>
-    <div class="container">
+    <footer>
+        <p>Contacto</p>
+        <p><i class="fas fa-envelope"></i> Correo electronico:</p>
+        <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
+        <p><i class="fab fa-telegram-plane"></i> Telegram</p>
+      </footer>
+    <!--  <div class="container">
         <div class="foto"></div>
         <div class="texto">
             <p class="presentacion">Soy paisajista, museologa y titiritera.<br>Tengo mas de 30 años de experiencia en el cultivo de suculentas, diseñando jardines de bajo mantenimiento.<br> ponerte en contacto conmigo y dejarme tu comentario.</p>
@@ -34,7 +75,6 @@
             </label>
             <button class="custom-btn btn-8" type="sumbit">submit</button>
         </div>
-    </div>
-    
-</body>
+    </div> -->
+  </body>
 </html>
