--- a/contacto.html
+++ b/contacto.html
@@ -1,118 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacto</title>
-    <style>
-        @import url("./css/paginas.css");
-      </style>
-      <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Galeria de Suculentas</title>
+    <link rel="shortcut icon" type="image/jpg" href="/images/cactus_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/e3bad17181.js"
       crossorigin="anonymous"
-    />
-</head>
-<body>
- <title>Form Validation</title>
+    ></script>
+    <style>
+      @import url("./css/base.css");
+      @import url("./css/basic-grid.css");
+    </style>
   </head>
+
   <body>
-    <div class="container">
-      <div class="content">
-        <div class="logo">
-          <img src="images/logo.svg" alt="" />
-        </div>
-        <div class="image"></div>
-        <div class="text">
-          Start for free & get <br />
-          attractive offers today !
-        </div>
-      </div>
-      <form id="form">
-        <div class="social">
-          <div class="title">Get Started</div>
-          <div class="question">
-            Already Have an Account? <br />
-            <span>Sign In</span>
-          </div>
+    <header id="header">
+      <h1 id="h1">Mi galeria de suculentas</h1>
+      <a href="index.html">
+        <p><i class="fas fa-home"></i> Ir al inicio</p>
+      </a>
+      <nav id="nav-bar">
+        <a class="nav-link" href="about.html">Info</a>
+        <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
+        <a class="nav-link" href="aeonium.html">Aeonium</a>
+        <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
+        <a class="nav-link" href="agave_victoria_reginae.html"
+          >Agave Victoria Reginae</a
+        >
+        <a class="nav-link" href="crassula_alba.html">Crassula Alba</a>
+        <a class="nav-link" href="echeveria_perle_von_nurnberg.html"
+          >Echeveria Perle Von Nurnberg</a
+        >
+        <a class="nav-link" href="echinocereus_pentalophus.html"
+          >Echinocereus Pentalophus</a
+        >
+        <a class="nav-link" href="graptopetalum_pentandrum.html"
+          >Graptopetalum Pentandrum</a
+        >
+        <a class="nav-link" href="haworthia_truncata.html"
+          >Haworthia Truncata</a
+        >
+        <a class="nav-link" href="kalanchoe_tyrsiflora.html"
+          >Kalanchoe Tyrsiflora</a
+        >
+        <a class="nav-link" href="stapelia.html">Stapelia</a>
+      </nav>
+    </header>
 
-          <div class="btn">
-            <div class="btn-1">
-              <img
-                src="https://img.icons8.com/color/30/000000/google-logo.png"
-              />
-              Sign Up
-            </div>
-            <div class="btn-2">
-              <img
-                src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png"
-              />
-              Sign Up
-            </div>
-          </div>
-
-          <div class="or">Or</div>
-        </div>
-
-        <!-- /** 
-          * ! user name Input here
-         **/ -->
-
-        <div>
-          <label for="username">User Name</label>
-          <i class="fas fa-user"></i>
-          <input
-            type="text"
-            name="username"
-            id="username"
-            placeholder="Joy Shaheb"
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-        <!-- /** 
-          * ! Email Input here
-         **/ -->
-
-        <div>
-          <label for="email">Email</label>
-          <i class="far fa-envelope"></i>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="abc@gmail.com"
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-        <!-- /** 
-          * ! Password Input here
-         **/ -->
-
-        <div>
-          <label for="password">Password</label>
-          <i class="fas fa-lock"></i>
-          <input
-            type="password"
-            name="password"
-            id="password"
-            placeholder="Password here"
-          />
-          <i class="fas fa-exclamation-circle failure-icon"></i>
-          <i class="far fa-check-circle success-icon"></i>
-          <div class="error"></div>
-        </div>
-
-        <button type="submit" id="submit">Submit</button>
-      </form>
-    </div>
+    <footer>
+      <p>Contacto</p>
+      <p><i class="fas fa-envelope"></i> Correo electronico:</p>
+      <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
+      <p><i class="fab fa-telegram-plane"></i> Telegram</p>
+    </footer>
   </body>
-  <script src="main.js"></script>
 </html>
-</body>
