--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galeria de Suculentas</title>
-    <link rel="ico"/>
-    <!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
+    <link rel="shortcut icon" type="image/jpg" href="/images/cactus_icon.png" />
+    <script
+      src="https://kit.fontawesome.com/e3bad17181.js"
+      crossorigin="anonymous"
+    ></script>
     <style>
-      @import url("./css/base.css");  
+      @import url("./css/base.css");
       @import url("./css/basic-grid.css");
     </style>
   </head>
@@ -16,14 +19,40 @@
   <body>
     <header id="header">
       <h1 id="h1">Mi galeria de suculentas</h1>
+      <a href="index.html">
+        <p><i class="fas fa-home"></i> Ir al inicio</p>
+      </a>
+      <nav id="nav-bar">
+        <a class="nav-link" href="about.html">Info</a>
+        <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
+        <a class="nav-link" href="aeonium.html">Aeonium</a>
+        <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
+        <a class="nav-link" href="agave_victoria_reginae.html"
+          >Agave Victoria Reginae</a
+        >
+        <a class="nav-link" href="crassula_alba.html">Crassula Alba</a>
+        <a class="nav-link" href="echeveria_perle_von_nurnberg.html"
+          >Echeveria Perle Von Nurnberg</a
+        >
+        <a class="nav-link" href="echinocereus_pentalophus.html"
+          >Echinocereus Pentalophus</a
+        >
+        <a class="nav-link" href="graptopetalum_pentandrum.html"
+          >Graptopetalum Pentandrum</a
+        >
+        <a class="nav-link" href="haworthia_truncata.html"
+          >Haworthia Truncata</a
+        >
+        <a class="nav-link" href="kalanchoe_tyrsiflora.html"
+          >Kalanchoe Tyrsiflora</a
+        >
+        <a class="nav-link" href="stapelia.html">Stapelia</a>
+      </nav>
     </header>
-    <nav id="navbar" class>
-      <a class="navbar-link" href="contacto.html"></a>
-      <a class="navbar-link" href="about.html"></a>
-    </nav>
+
     <section class="basic-grid">
       <a href="about.html">
-        <div class="card" id="foto2">foto 2</div>
+        <div class="card" id="about">Info y Contacto</div>
       </a>
       <a href="cola_de_mono.html">
         <div class="card" id="cola_de_mono">Cola de Mono</div>
@@ -47,8 +76,8 @@
           Echeveria Perle Von Nurnberg
         </div>
       </a>
-      <a href="echinocereus_pentalophus.html"
-        ><div class="card" id="echinocereus_pentalophus">
+      <a href="echinocereus_pentalophus.html">
+        <div class="card" id="echinocereus_pentalophus">
           Echinocereus Pentalophus
         </div>
       </a>
@@ -69,10 +98,10 @@
     </section>
 
     <footer>
-      <p>Contacto:</p>
-      <p>correo electronico:</p>
-      <p>WhatsApp:</p>
-      <p>Telegram</p>
+      <p>Contacto</p>
+      <p><i class="fas fa-envelope"></i> Correo electronico:</p>
+      <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
+      <p><i class="fab fa-telegram-plane"></i> Telegram</p>
     </footer>
     <script src="script.js" type="script"></script>
   </body>
