agregados los datos de las especies. faltan completar

--- a/crassula_alba.html
+++ b/crassula_alba.html
@@ -52,24 +52,24 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-crassula-alba"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Sol pleno, media sombra</td>
               </tr>
               <tr>
                 <td>agua</td>
-                <td>Riego cada vez que el sustrato este seco</td>
+                <td>Riego moderado</td>
               </tr>
               <tr>
                 <td>suelo</td>
-                <td></td>
+                <td>Sustrato con buen drenaje</td>
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>generalmente es afectada por cochinilla algodonosa</td>
               </tr>
             </table>
           </div>
