--- a/haworthia_truncata.html
+++ b/haworthia_truncata.html
@@ -52,12 +52,12 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-haworthia-truncata"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Se desarrolla mejor a media sombra</td>
               </tr>
               <tr>
                 <td>agua</td>
@@ -69,7 +69,7 @@
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>Resistente a plagas</td>
               </tr>
             </table>
           </div>
