--- a/agave_potatorum.html
+++ b/agave_potatorum.html
@@ -52,7 +52,7 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-agave-potatorum"></div>
           <div class="flip-card-back">
             <table>
               <tr>
