--- a/agave_victoria_reginae.html
+++ b/agave_victoria_reginae.html
@@ -52,24 +52,27 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div
+            class="flip-card-front"
+            id="flip-card-front-agave-victoria-reginae"
+          ></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Sol media sombra</td>
               </tr>
               <tr>
                 <td>agua</td>
-                <td>Riego cada vez que el sustrato este seco</td>
+                <td>Regar muy poco en invierno</td>
               </tr>
               <tr>
                 <td>suelo</td>
-                <td></td>
+                <td>Suelo bien drenado</td>
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>El excesivo riego produce pudrición de raíz y corona</td>
               </tr>
             </table>
           </div>
