--- a/echeveria_perle_von_nurnberg.html
+++ b/echeveria_perle_von_nurnberg.html
@@ -52,16 +52,16 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-echeveria-perle-von-nurnberg"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Necesita crecer en lugares iluminados, aunque tolera media sombra</td>
               </tr>
               <tr>
                 <td>agua</td>
-                <td>Riego cada vez que el sustrato este seco</td>
+                <td>Evitar encharcamiento </td>
               </tr>
               <tr>
                 <td>suelo</td>
@@ -69,7 +69,7 @@
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>Vulnerable a la infestacion de cochinillas</td>
               </tr>
             </table>
           </div>
