--- a/graptopetalum_pentandrum.html
+++ b/graptopetalum_pentandrum.html
@@ -52,12 +52,12 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-graptopetalum-pentandrum"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Exposición sol de mañana</td>
               </tr>
               <tr>
                 <td>agua</td>
@@ -69,7 +69,7 @@
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>sensible al ataque de cochinillas</td>
               </tr>
             </table>
           </div>
