--- a/kalanchoe_tyrsiflora.html
+++ b/kalanchoe_tyrsiflora.html
@@ -52,12 +52,12 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-kalanchoe-tyrsiflora"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Pleno sol, intenso color rojizo en invierno al exponer al sol </td>
               </tr>
               <tr>
                 <td>agua</td>
@@ -69,7 +69,7 @@
               </tr>
               <tr>
                 <td>cuidados</td>
-                <td>Especie rústica. Proteger de heladas intensas</td>
+                <td>No soporta heladas</td>
               </tr>
             </table>
           </div>
