--- a/stapelia.html
+++ b/stapelia.html
@@ -52,16 +52,16 @@
     <div class="flip-card-container">
       <div class="flip-card">
         <div class="flip-card-inner">
-          <div class="flip-card-front"></div>
+          <div class="flip-card-front" id="flip-card-front-stapelia"></div>
           <div class="flip-card-back">
             <table>
               <tr>
                 <td>sol</td>
-                <td>Sol directo en invierno, media sombra en verano</td>
+                <td>Media sombra, sol de mañana.</td>
               </tr>
               <tr>
                 <td>agua</td>
-                <td>Riego cada vez que el sustrato este seco</td>
+                <td>Riego espaciado no soporta encharcamientoo</td>
               </tr>
               <tr>
                 <td>suelo</td>
