añadido responsive al navbar

--- a/about.html
+++ b/about.html
@@ -49,12 +49,27 @@
         <a class="nav-link" href="stapelia.html">Stapelia</a>
       </nav>
     </header>
+    <div class="register-container">
+      <div class="register-photo">
+        <img src="../images/vilma.jpeg" alt="Vilma!"/>
+      </div>
+      <div class="register-info"></div>
+      <div class="register-forms"></div>
+      <div class="register-text"></div>
+      <div class="register-email">
+        <input type="text" name="Email" required placeholder="email">
+      </div>
+      <div class="register-name">
+          <input type="text" name="name" required placeholder="nombre">
+      </div>
+      <div class="register-password"></div>
+    </div>
+
     <footer>
-        <p>Contacto</p>
-        <p><i class="fas fa-envelope"></i> Correo electronico:</p>
-        <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
-        <p><i class="fab fa-telegram-plane"></i> Telegram</p>
-      </footer>
-    
+      <p>Contacto</p>
+      <p><i class="fas fa-envelope"></i> Correo electronico:</p>
+      <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
+      <p><i class="fab fa-telegram-plane"></i> Telegram</p>
+    </footer>
   </body>
 </html>
