añadido el registro

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <a href="index.html">
         <p><i class="fas fa-home"></i> Ir al inicio</p>
       </a>
-      <nav id="nav-bar">
-        <a class="nav-link" href="about.html">Info</a>
+      <nav class="basic-grid" id="nav-bar">
+        <a class="nav-link" href="registro.html">Info</a>
         <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
         <a class="nav-link" href="aeonium.html">Aeonium</a>
         <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
@@ -51,7 +51,7 @@
     </header>
 
     <section class="basic-grid">
-      <a href="about.html">
+      <a href="registro.html">
         <div class="card" id="about">Info y Contacto</div>
       </a>
       <a href="cola_de_mono.html">
@@ -103,6 +103,6 @@
       <p><i class="fab fa-whatsapp"></i> WhatsApp:</p>
       <p><i class="fab fa-telegram-plane"></i> Telegram</p>
     </footer>
-    <script src="script.js" type="script"></script>
+    
   </body>
 </html>
