falta el responsive

--- a/echeveria_perle_von_nurnberg.html
+++ b/echeveria_perle_von_nurnberg.html
@@ -23,8 +23,8 @@
         <p><i class="fas fa-home"></i> Ir al inicio</p>
       </a>
       <nav id="nav-bar">
-        <a class="nav-link" href="about.html">Info</a>
-        <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
+        <a class="nav-link" href="registro.html">Info</a>
+        <a class="nav-link" href="registro.html">Cola de Mono</a>
         <a class="nav-link" href="aeonium.html">Aeonium</a>
         <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
         <a class="nav-link" href="agave_victoria_reginae.html"
