--- a/registro.html
+++ b/registro.html
@@ -24,7 +24,7 @@
         <p><i class="fas fa-home"></i> Ir al inicio</p>
       </a>
       <nav class="basic-grid" id="nav-bar">
-        <a class="nav-link" href="about.html">Info</a>
+        <a class="nav-link" href="registro.html">Info</a>
         <a class="nav-link" href="cola_de_mono.html">Cola de Mono</a>
         <a class="nav-link" href="aeonium.html">Aeonium</a>
         <a class="nav-link" href="agave_potatorum.html">Agave Potatorum</a>
@@ -51,55 +51,54 @@
       </nav>
     </header>
 
-    
-      <div class="container">
-        <h1>Registrate para recibir novedades en tu correo!</h1>
-        <form action="" id="form" class="form">
-          <div class="input">
-            <label for="username">Nombre de Usuario</label>
-            <input
-              type="text"
-              name="username"
-              id="username"
-              placeholder="Nombre de Usuario"
-              autocomplete="off"
-            />
-            <small>Error message</small>
-          </div>
-          <div class="input">
-            <label for="email">Email</label>
-            <input
-              type="text"
-              name="email"
-              id="email"
-              placeholder="Email"
-              autocomplete="off"
-            />
-            <small>Error message</small>
-          </div>
-          <div class="input">
-            <label for="password">Contraseña</label>
-            <input
-              type="password"
-              name="password"
-              id="password"
-              placeholder="Contraseña"
-            />
-            <small>Error message</small>
-          </div>
-          <div class="input">
-            <label for="c-password">Confirmar contraseña</label>
-            <input
-              type="password"
-              name="c-password"
-              id="c-password"
-              placeholder="Confirmar contraseña"
-            />
-            <small>Error message</small>
-          </div>
-          <button>Registrarse!</button>
-        </form>
-      </div>
-      <script type="text/javascript" src="scripts/registro.js"></script>
+    <div class="container">
+      <h1>Registrate para recibir novedades en tu correo!</h1>
+      <form action="" id="form" class="form">
+        <div class="input">
+          <label for="username">Nombre de Usuario</label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="Nombre de Usuario"
+            autocomplete="off"
+          />
+          <small>Error message</small>
+        </div>
+        <div class="input">
+          <label for="email">Email</label>
+          <input
+            type="text"
+            name="email"
+            id="email"
+            placeholder="Email"
+            autocomplete="off"
+          />
+          <small>Error message</small>
+        </div>
+        <div class="input">
+          <label for="password">Contraseña</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Contraseña"
+          />
+          <small>Error message</small>
+        </div>
+        <div class="input">
+          <label for="c-password">Confirmar contraseña</label>
+          <input
+            type="password"
+            name="c-password"
+            id="c-password"
+            placeholder="Confirmar contraseña"
+          />
+          <small>Error message</small>
+        </div>
+        <button>Registrarse!</button>
+      </form>
+    </div>
+    <script type="text/javascript" src="scripts/registro.js"></script>
   </body>
 </html>
