arreglados los paths relativos

--- a/registro.html
+++ b/registro.html
@@ -13,7 +13,7 @@
     <style>
       @import url("./css/base.css");
       @import url("./css/basic-grid.css");
-      @import url("../css/registro.css");
+      @import url("./css/registro.css");
     </style>
   </head>
 
@@ -99,6 +99,6 @@
         <button>Registrarse!</button>
       </form>
     </div>
-    <script type="text/javascript" src="scripts/registro.js"></script>
+    <script type="text/javascript" src="../scripts/registro.js"></script>
   </body>
 </html>
